--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 
 
 :root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
+  font-family: Gotham Pro, sans-serif;
 
 
   font-synthesis: none;
@@ -13,8 +13,3 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 }
-
-
-
-
-
