--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,25 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: 'Gotham Pro';
+  src: './assets/fonts/Gotham Pro/GothamPro-Regular.ttf'
+}
+
+@font-face {
+  font-family: 'Gotham Pro Black';
+  src: './assets/fonts/Gotham Pro/GothamPro-Black.ttf'
+}
+
+@font-face {
+  font-family: 'Gotham Pro Medium';
+  src: './assets/fonts/Gotham Pro/GothamPro-Medium.ttf'
+}
+
+@font-face {
+  font-family: 'Gotham Pro Bold';
+  src: './assets/fonts/Gotham Pro/GothamPro-Bold.ttf'
+}
 
 :root {
   font-family: Gotham Pro, sans-serif;
